--- a/styles/layout.module.css
+++ b/styles/layout.module.css
@@ -1,21 +1,21 @@
 .container {
-  max-width: 36rem;
-  padding: 0 1rem;
+  padding: 0 5vw;
   margin: 0 auto;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-around;
+}
 
+.section {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: column;
-  height: 100vh;
+  min-height: 100vh;
+  width: 30vw;
 }
-
 .header {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.backToHome {
-  margin: 3rem 0 0;
 }
