--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -84,6 +84,7 @@
 .button {
   margin: 2em 0;
   padding: 0.5em 1.5em;
+  cursor: pointer;
   font-size: 1.5em;
   background: black;
   border: 1px solid transparent;
