--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -1,5 +1,5 @@
 .container {
-  padding: 0 5vw;
+  padding: 0;
   margin: 0 auto;
   display: flex;
   flex-flow: row;
@@ -12,7 +12,7 @@
   align-items: center;
   flex-flow: column;
   min-height: 100vh;
-  width: 30vw;
+  width: 40vw;
 }
 .header {
   display: flex;
